# ESP32_doorbell

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  setdebuglevel.bash
components/Raster-Font/: fonts.c  fonts.h
components/Raster-Font/fonts/: font_tahoma_8pt.h
components/remote_log/: CMakeLists.txt  remote_log.c
components/remote_log/include/: remote_log.h
main/: 210408_main_werkt.cpp  CMakeLists.txt  OLED.cpp  SSD1306.cpp  main.cpp  main.cpp.210131_werktzonderstreamer  main210412.cpp
main/web/: index.html  settings.html  update.html
